made links open on new tabs

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   <p>
                     Hi! I'm Will, a software developer passionate about building apps and websites that are both
                     beautiful and functional. But when I'm not coding, you can find me sharing my knowledge and
-                    experiences on my YouTube channel, <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"><span>The Tech Dad</span></a>. Feel free to check out my projects, connect with
+                    experiences on my YouTube channel, <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw" target="_blank" rel="noreferrer noopener"><span>The Tech Dad</span></a>. Feel free to check out my projects, connect with
                     me, or explore some of my videos!
                   </p>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="info-item padd-15">
                       <p>
                         Watch me on Youtube:
-                        <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw"><span>The Tech Dad</span></a>
+                        <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw" target="_blank" rel="noreferrer noopener"><span>The Tech Dad</span></a>
                       </p>
                     </div>
                     <div class="info-item padd-15">
@@ -114,9 +114,9 @@
                     <!-- <div class="info-item padd-15">
                                     <p>Phone : <span></span></p>
                                 </div> -->
-                    <div class="info-item padd-15">
+                    <!-- <div class="info-item padd-15">
                       <p>Location : <span>Cincinnati </span></p>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
                
@@ -379,7 +379,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://getqueencityplumbing.com/"><img src="images/Local plumber.png"
+                  <a href="https://getqueencityplumbing.com/" target="_blank" rel="noreferrer noopener"><img src="images/Local plumber.png"
                       alt="Queen city plumbing" /></a>
                 </div>
               </div>
@@ -392,7 +392,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://rad-custard-30bd3c.netlify.app/"><img src="images/Screenshot (4).png"
+                  <a href="https://rad-custard-30bd3c.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/Screenshot (4).png"
                       alt="simone game" /></a>
                 </div>
               </div>
@@ -405,7 +405,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/"><img src="images/Screenshot (5).png"
+                  <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/Screenshot (5).png"
                       alt="" /></a>
                 </div>
               </div>
@@ -418,7 +418,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://willscalculator.netlify.app/"><img src="images/calc.png" alt="" /></a>
+                  <a href="https://willscalculator.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/calc.png" alt="" /></a>
                 </div>
               </div>
             </div>
@@ -439,7 +439,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://stayinggreen.netlify.app/"><img src="images/stayinggreen.png" alt="" /></a>
+                  <a href="https://stayinggreen.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/stayinggreen.png" alt="" /></a>
                 </div>
               </div>
             </div>
@@ -452,7 +452,7 @@ Managed facilities and vehicles.
               </div>
                         <div class="portfolio-item-inner shadow-dark">
                             <div class="portfolio-img">
-                                <a href="https://techdad87.com/"><img src="images/techdadsite.png" alt=""></a>
+                                <a href="https://techdad87.com/" target="_blank" rel="noreferrer noopener"><img src="images/techdadsite.png" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -474,7 +474,7 @@ Managed facilities and vehicles.
           <div class="row">
             <!-- === Contact info item start === -->
             <div class="contact-info-item padd-15">
-              <a href="https://www.linkedin.com/in/william-ray-55493a179/">
+              <a href="https://www.linkedin.com/in/william-ray-55493a179/" target="_blank" rel="noreferrer noopener">
                 <div class="icon"><i class="fa fa-linkedin"></i></div>
               </a>
               <h4>Linkedin</h4>
@@ -489,7 +489,7 @@ Managed facilities and vehicles.
             <!-- === Contact info item end === -->
             <!-- === Contact info item start === -->
             <div class="contact-info-item padd-15">
-              <a href="https://github.com/Will513r">
+              <a href="https://github.com/Will513r" target="_blank" rel="noreferrer noopener">
                 <div class="icon"><i class="fa fa-globe-americas"></i></div>
               </a>
               <h4>GitHub</h4>
@@ -497,7 +497,7 @@ Managed facilities and vehicles.
             <!-- === Contact info item end === -->
             <!-- === Contact info item start === -->
             <div class="contact-info-item padd-15">
-              <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw">
+              <a href="https://www.youtube.com/channel/UCjV0wdH89M-Cq7yO2v2rIvw" target="_blank" rel="noreferrer noopener">
                 <div class="icon"><i class="fa fa-video-camera"></i></div>
               </a>
               <h4>Watch Me on Youtube</h4>
