--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://rad-custard-30bd3c.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/Screenshot (4).png"
+                  <a href="https://rad-custard-30bd3c.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/simon-game.png"
                       alt="simone game" /></a>
                 </div>
               </div>
@@ -405,7 +405,7 @@ Managed facilities and vehicles.
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
-                  <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/Screenshot (5).png"
+                  <a href="https://fantastic-travesseiro-e7a9b1.netlify.app/" target="_blank" rel="noreferrer noopener"><img src="images/dice.png"
                       alt="" /></a>
                 </div>
               </div>
@@ -435,7 +435,7 @@ Managed facilities and vehicles.
             <!-- === portfolio item start === -->
             <div class="portfolio-item padd-15">
               <div class="portfolio-heading padd-15">
-                <h2>Local Business page</h2>
+                <h2>Local Landscaping page</h2>
               </div>
               <div class="portfolio-item-inner shadow-dark">
                 <div class="portfolio-img">
