updating tech dad colors

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Managed facilities and vehicles.
                             improvements in program development. Provided leadership and guidance to staff, modeling
                             best
                             practices, and maintaining clear communication channels even in high-pressure situations.
-                            ● Analyzed and redesigned production workflow, eliminating redundancies and bottlenecks.
+                             Analyzed and redesigned production workflow, eliminating redundancies and bottlenecks.
                           </p>
                         </div>
                       </div>
